--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         background: #ebebeb;
         padding: 20px;
         width: 960px;
+        border-style:solid;
+        border-color: #777;
+        border-width: 2px;
         text-align: center;
     }
     .article {
@@ -32,5 +35,6 @@
 </head>
 <body>
     <div class="header">header</div>
+    <div class="header">nav</div>
 </body>
 </html>
