create an individual css class for nav box

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         border-width: 2px;
         text-align: center;
     }
+    .nav {
+        background: #ebebeb;
+        padding: 20px;
+        width: 960px;
+        border-style:solid;
+        border-color: #777;
+        border-width: 2px;
+        text-align: center;
+    }
     .article {
         color: #ebebeb;
         background: #777;
@@ -35,6 +44,6 @@
 </head>
 <body>
     <div class="header">header</div>
-    <div class="header">nav</div>
+    <div class="nav">nav</div>
 </body>
 </html>
