code overhaul. Basic framework done

--- a/index.html
+++ b/index.html
@@ -1,49 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-    body {
-        font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-        color: #777;
-        background: #777;
-        width: 960px;
-        font-size: 18px;
-        align-content: center
-    }
-    .header {
-        background: #ebebeb;
-        padding: 20px;
-        width: 960px;
-        border-style:solid;
-        border-color: #777;
-        border-width: 2px;
-        text-align: center;
-    }
-    .nav {
-        background: #ebebeb;
-        padding: 20px;
-        width: 960px;
-        border-style:solid;
-        border-color: #777;
-        border-width: 2px;
-        text-align: center;
-    }
-    .article {
-        color: #ebebeb;
-        background: #777;
-    }
-    p.one {
-        color: #777;
-        background: #ebebeb
-    }
-    h1.one {
-        color: #777;
-        background: #ebebeb
-    }
-</style>
-</head>
-<body>
-    <div class="header">header</div>
-    <div class="nav">nav</div>
-</body>
+    <head>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="header">header</div>
+        <div class="nav">nav</div>
+        <div class="flexbox">
+            <div class="section">
+            section
+            <div class="article">
+                article
+                <h1>h1, h2, h3</h1>
+                <p>p</p>
+                </div>
+            </div>
+            <div class="aside">aside</div>
+        </div>
+        <div class="footer">footer</div>
+        
+    </body>
 </html>
