adding comments in html and css source code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <!--header-->
         <div class="header">header</div>
+        <!--navigation pane-->
         <div class="nav">nav</div>
+        <!--use flexbox to set section and aside as the same height-->
         <div class="flexbox">
             <div class="section">
             section
@@ -17,7 +20,7 @@
             </div>
             <div class="aside">aside</div>
         </div>
+        <!--footer-->
         <div class="footer">footer</div>
-        
     </body>
 </html>
